--- a/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/add-authorization-dialog.html
@@ -353,6 +353,6 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Cancelar</button>
-    <button mat-flat-button color="accent" (click)="suggestDoses()" *ngIf="isSuggestDosesVisible">Sugerir Doses</button>
+    <button mat-flat-button color="accent" (click)="suggestDoses()" *ngIf="isSuggestDosesVisible">Sugerir Datas</button>
     <button mat-flat-button class="create-button" (click)="addAuthorization()" >Agendar</button>
 </mat-dialog-actions>
