--- a/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
+++ b/VaccineC/src/app/pages/aplicacao/aplicacao.component.html
@@ -5,7 +5,68 @@
         <app-container containerTitle="Aplicação" containerPath="Operacional" [information]="informationField">
             <mat-tab-group>
                 <mat-tab label="Pesquisa">
-                    <app-aplicacao-pesquisa></app-aplicacao-pesquisa>
+                  <div class="search-group">
+                    <div class="col-sm-11 p-0 d-flex">
+                        <mat-form-field class="search-form-field col-sm-10" appearance="outline">
+                            <mat-label>Digite o nome da pessoa ou o CPF</mat-label>
+                            <input id="searchApplicationName"
+                                   matInput
+                                   type="text"
+                                   [(ngModel)]="searchApplicationName"
+                                   placeholder="(mínimo 3 caracteres)">
+                            <button *ngIf="value"
+                                    matSuffix
+                                    mat-icon-button
+                                    aria-label="Clear"
+                                    (click)="value=''">
+                                <mat-icon>close</mat-icon>
+                            </button>
+                        </mat-form-field>
+                        <button (click)="loadData()" id="mat-search-button" mat-raised-button color="primary"
+                        class="mat-button-entry me-2" [disabled]="searchButtonLoading">
+                        <div class="spinner">
+                            <mat-spinner *ngIf="searchButtonLoading" [diameter]="15"></mat-spinner>
+                            <span *ngIf="!searchButtonLoading" class="fa-solid fa-magnifying-glass me-1 w-20px">
+                            </span>Pesquisar
+                        </div>
+                    </button>
+                    </div>
+                </div>
+
+                <div id="search-table">
+                  <div class="col-sm-11 search-table-content mat-elevation-z2">
+                    <table mat-table [dataSource]="dataSourceSearch" class="col-sm-12" matSort
+                    matSortDirection="asc">
+
+                        <ng-container matColumnDef="imageUrl">
+                            <mat-header-cell *matHeaderCellDef> Foto </mat-header-cell>
+                            <mat-cell *matCellDef="let element">
+                              <img [src]="element.imageUrl" /> </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="pacient">
+                            <mat-header-cell *matHeaderCellDef> Tomador </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.pacient}} </mat-cell>
+                        </ng-container>
+
+                        <ng-container matColumnDef="date">
+                            <mat-header-cell *matHeaderCellDef> Data e Hora </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+                        </ng-container>
+
+                        <mat-header-row *matHeaderRowDef="displayedSearchColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedSearchColumns;"></mat-row>
+
+                      <!-- Row shown when there is no matching data. -->
+                      <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="2">Nenhum registro encontrado.</td>
+                      </tr>
+                    </table>
+
+                    <mat-paginator #paginatorApplication="matPaginator" [pageSizeOptions]="[10, 25, 100]">
+                    </mat-paginator>
+                  </div>
+                </div>
                 </mat-tab>
                 <mat-tab label="Aplicação">
                     <app-aplicacao-cadastro></app-aplicacao-cadastro>
