--- a/VaccineC/src/app/pages/agendamento/search-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/search-authorization-dialog.html
@@ -15,107 +15,163 @@
     }
 
     .search-group {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
-  margin-bottom: 2rem;
-}
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        font-size: 13px;
+        margin-bottom: 2rem;
+    }
 
-.search-table-content {
-  padding-left: 0px;
-  padding-right: 0px;
-}
+    .search-table-content {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 
-:host ::ng-deep .search-group .mat-form-field-wrapper {
-  padding: 0px;
-}
+    :host ::ng-deep .search-group .mat-form-field-wrapper {
+        padding: 0px;
+    }
 
-:host ::ng-deep.mat-spinner{
-  margin-right: 0.2rem !important;
-}
+    :host ::ng-deep.mat-spinner {
+        margin-right: 0.2rem !important;
+    }
 
-.mat-button-entry {
-  margin-bottom: 0px !important;
-  align-self: center !important;
-}
+    .mat-button-entry {
+        margin-bottom: 0px !important;
+        align-self: center !important;
+    }
 
-form {
-  width: 100% !important;
-}
+    form {
+        width: 100% !important;
+    }
 
-.spinner-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+    .spinner-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
 
-.button-container {
-  display: inline-block;
-  position: relative;
-  margin-bottom: 0px !important;
-  align-self: center !important;
-}
+    .button-container {
+        display: inline-block;
+        position: relative;
+        margin-bottom: 0px !important;
+        align-self: center !important;
+    }
 
-.spinner{
-  display: flex;
-    align-content: center;
-    justify-content: space-between;
-    align-items: center;
-}
+    .spinner {
+        display: flex;
+        align-content: center;
+        justify-content: space-between;
+        align-items: center;
+    }
 
-:host ::ng-deep .mat-chip {
-  font-size: 12px !important;
-  color: #858796 !important;
-}
-
+    :host ::ng-deep .mat-dialog-content {
+        max-height: 76vh;
+    }
 </style>
 
 <h2 mat-dialog-title>Buscar Agendamentos</h2>
-<mat-dialog-content class="mat-typography" style="max-height: initial;">
-    <div class="search-group">
+<mat-dialog-content class="mat-typography" style="height:100%">
+    <div class="search-group" style="margin-bottom:0.5rem">
         <div class="col-sm-11 p-0 d-flex">
+            
             <mat-form-field class="search-form-field col-sm-10" appearance="outline">
                 <mat-label>Digite o nº da Autorização ou o nome do Tomador</mat-label>
                 <input matInput type="text" [(ngModel)]="searchAuth" placeholder="(Mínimo 3 caracteres)">
             </mat-form-field>
-            <button (click)="loadAuthData()" id="mat-search-button" mat-raised-button
-                color="primary" class="mat-button-entry me-2" [disabled]="searchButtonLoading">
+
+            <button 
+                (click)="loadAuthData()" 
+                id="mat-search-button" 
+                mat-raised-button 
+                color="primary"
+                class="mat-button-entry me-2" 
+                [disabled]="searchButtonLoading">
+                
                 <div class="spinner">
                     <mat-spinner *ngIf="searchButtonLoading" [diameter]="15"></mat-spinner>
-                    <span *ngIf="!searchButtonLoading"
-                        class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
+                    <span *ngIf="!searchButtonLoading" class="fa-solid fa-magnifying-glass me-1 w-20px"></span>
                     Pesquisar
                 </div>
             </button>
+
+            <button 
+                id="mat-add-button" 
+                mat-raised-button 
+                class="mat-button-entry" 
+                color="accent"
+                matTooltip="Filtros Adicionais" 
+                matTooltipPosition="above"
+                [matMenuTriggerFor]="menu">
+
+                <span class="fa-solid fa-filter w-20px"></span>
+            </button>
+            <mat-menu #menu="matMenu">
+                <button mat-menu-item (click)="showSearchSituation()">Situação</button>
+                <button mat-menu-item (click)="showSearchPerson()">Responsável Financeiro</button>
+            </mat-menu>
+        </div>    
+    </div>
+    <div class="search-group" style="margin-bottom:1rem">
+        <div class="col-sm-11 p-0 d-flex" *ngIf="isFilterVisible">
+            <mat-form-field appearance="outline" class="col-sm-5" *ngIf="isFilterSituationVisible">
+                <mat-label>Situação da Autorização</mat-label>
+                <mat-select [(ngModel)]="searchSituation">
+                    <mat-option value="T">TODOS</mat-option>
+                    <mat-option value="C">CONFIRMADO</mat-option>
+                    <mat-option value="P">APLICADO</mat-option>
+                    <mat-option value="X">CANCELADO</mat-option>
+                </mat-select>
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="col-sm-7" *ngIf="isFilterResponsibleVisible">
+                <mat-label>Responsável Financeiro</mat-label>
+                <input 
+                    (click)="searchPersonByAutoComplete()" 
+                    type="text" 
+                    placeholder="Selecione a Pessoa" 
+                    aria-label="Number" matInput
+                    [matAutocomplete]="autoPerson"
+                    [(ngModel)]="searchPerson">
+                <mat-autocomplete 
+                    #autoPerson="matAutocomplete"
+                    [displayWith]="displayStatePerson">
+                    
+                    <mat-option *ngFor="let option of filteredOptions | async"
+                        [value]="option">
+                        {{option.Name}}
+                    </mat-option>
+                </mat-autocomplete>
+                <mat-icon matSuffix>search</mat-icon>
+            </mat-form-field>
         </div>
     </div>
+    
+   
     <div id="search-table">
         <div class="col-sm-11 search-table-content mat-elevation-z2">
-            <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name"
-                matSortDirection="asc">
+            <table class="col-sm-12" mat-table [dataSource]="dataSource" matSort matSortActive="Name" matSortDirection="asc">
 
                 <!-- Date Column -->
                 <ng-container matColumnDef="Date">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Data </th>
-                    <td mat-cell *matCellDef="let row"> {{row.Event.StartDate | date: 'dd/MM/yyyy'}} às
-                        {{row.Event.StartTime}}</td>
+                    <td mat-cell *matCellDef="let row"> {{row.Event.StartDate | date: 'dd/MM/yyyy'}} às {{row.Event.StartTime}}</td>
                 </ng-container>
 
                 <!-- AuthorizationNumber Column -->
                 <ng-container matColumnDef="AuthorizationNumber">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Autorização </th>
-                    <td mat-cell *matCellDef="let row"> 
+                    <td mat-cell *matCellDef="let row">
                         {{treatAuthSituation(row.Situation)}}
                         <div>
-                            <span title="{{authSituationTitle}}" class="me-2 fa-solid fa-circle {{authSituation}}"></span>
+                            <span title="{{authSituationTitle}}"
+                                class="me-2 fa-solid fa-circle {{authSituation}}"></span>
                             <span>{{row.AuthorizationNumber}}</span>
                         </div>
                     </td>
@@ -142,14 +198,15 @@ form {
                 <ng-container matColumnDef="Options">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td mat-cell *matCellDef="let row">
-                        <button mat-icon-button color="primary" title="Visualizar" (click)="openUpdateAuthorizationDialog(row.Event.ID)">
+                        <button mat-icon-button color="primary" title="Visualizar"
+                            (click)="openUpdateAuthorizationDialog(row.Event.ID)">
                             <i class="fa-solid fa-eye"></i>
                         </button>
                     </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr class="hover-element-row" mat-row *matRowDef="let row; columns: displayedColumns;"(dblclick)="openUpdateAuthorizationDialog(row.Event.ID)" style="cursor:pointer;"></tr>
+                <tr class="hover-element-row" mat-row *matRowDef="let row; columns: displayedColumns;" (dblclick)="openUpdateAuthorizationDialog(row.Event.ID)" style="cursor:pointer;"></tr>
 
                 <!-- Row shown when there is no matching data. -->
                 <tr class="mat-row" *matNoDataRow>
@@ -157,10 +214,15 @@ form {
                 </tr>
             </table>
 
-            <mat-paginator [pageSizeOptions]="[5, 15, 100]"></mat-paginator>
+            <mat-paginator [pageSizeOptions]="[4, 15, 100]"></mat-paginator>
         </div>
     </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-flat-button mat-dialog-close color="primary" cdkFocusInitial>Voltar</button>
+    <button 
+        mat-flat-button mat-dialog-close 
+        color="primary" 
+        cdkFocusInitial>
+        Voltar
+    </button>
 </mat-dialog-actions>
