--- a/VaccineC/src/app/pages/agendamento/search-authorization-dialog.html
+++ b/VaccineC/src/app/pages/agendamento/search-authorization-dialog.html
@@ -114,6 +114,7 @@
             </button>
             <mat-menu #menu="matMenu">
                 <button mat-menu-item (click)="showSearchSituation()">Situação</button>
+                <mat-divider></mat-divider>
                 <button mat-menu-item (click)="showSearchPerson()">Responsável Financeiro</button>
             </mat-menu>
         </div>    
